# realworld

./: behave.ini
integration_tests/: README.md  behave.ini  pyproject.toml
integration_tests/tests/: environment.py
integration_tests/tests/acceptance/: environment.py
integration_tests/tests/acceptance/features/: article.feature  register.feature  settings.feature
integration_tests/tests/acceptance/modules/: auxiliar.py
integration_tests/tests/acceptance/pages_objects/: pos.py
integration_tests/tests/acceptance/steps/: article.py  register.py  settings.py
integration_tests/tests/features/: article.feature
integration_tests/tests/modules/: auxiliar.py
integration_tests/tests/steps/: article.py  register.py  settings.py
