[tool.poetry]
name = "integration-tests"
version = "0.1.0"
description = ""
authors = ["Renan Moura"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
webdriver-manager = "^4.0.0"
behave = "^1.2.6"
selenium = "^4.12.0"
faker = "^19.3.1"
ipdb = "^0.13.13"
expects = "^0.9.0"
page-objects = "^1.1.0"
selenium-wire = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
